js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-typeof-import-source.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
{
typeof
import
.
source
;
}
